docs: swagger fixed, 3 handlers remained
